# NL2SQL

./: .gitignore  main.py  pyproject.toml  query_log.txt  question_history.txt  streamlit_app.py
